--- a/configs/data_prepare.yaml
+++ b/configs/data_prepare.yaml
@@ -11,23 +11,23 @@ datasets:
     product_type: "reanalysis"
     format: "grib"
     variable:
-      - "10m_u_component_of_wind"
-      - "10m_v_component_of_wind"
-      - "2m_dewpoint_temperature"
-      - "2m_temperature"
-      - "mean_sea_level_pressure"
-      - "sea_surface_temperature"
-      - "surface_pressure"
-      - "total_precipitation"
-      - "surface_thermal_radiation_downwards"
-      - "top_net_thermal_radiation"
-      - "boundary_layer_height"
-      - "geopotential"
-      - "land_sea_mask"
-      - "total_column_water"
-      - "total_column_water_vapour"
-      - "100m_u_component_of_wind"
-      - "100m_v_component_of_wind"
+      - "10m_u_component_of_wind"     # u_s10m
+      - "10m_v_component_of_wind"     # v_s10m
+      - "2m_dewpoint_temperature"     # d_s2m
+      - "2m_temperature"              # t_s2m
+      - "mean_sea_level_pressure"     # msl_sfc
+      - "sea_surface_temperature"     # sst_sea
+      - "surface_pressure"            # sp_sfc
+      - "total_precipitation"         # tp_sfc
+      - "surface_thermal_radiation_downwards" # ssrd_sfc
+      - "top_net_thermal_radiation"   # ttr_sfc
+      - "boundary_layer_height"       # blh
+      - "geopotential"                # hgt
+      - "land_sea_mask"               # lsm
+      - "total_column_water"          # tcw
+      - "total_column_water_vapour"   # tcwv
+      - "100m_u_component_of_wind"    # u_s100m
+      - "100m_v_component_of_wind"            # v_s100m
 
   era5_upper:
     type: "cds"
@@ -35,17 +35,17 @@ datasets:
     product_type: "reanalysis"
     format: "grib"
     variable:
-      - "geopotential"
-      - "relative_humidity"
-      - "specific_cloud_ice_water_content"
-      - "specific_cloud_liquid_water_content"
-      - "specific_humidity"
-      - "specific_rain_water_content"
-      - "specific_snow_water_content"
-      - "temperature"
-      - "u_component_of_wind"
-      - "v_component_of_wind"
-      - "vertical_velocity"
+      - "geopotential"                        # z_50hPa
+      - "relative_humidity"                   # r_50hPa
+      - "specific_cloud_ice_water_content"    # ciwc_50hPa
+      - "specific_cloud_liquid_water_content" # clwc_50hPa
+      - "specific_humidity"                   # q_50hPa
+      - "specific_rain_water_content"         # crwc_50hPa
+      - "specific_snow_water_content"         # cswc_50hPa
+      - "temperature"                         # t_50hPa
+      - "u_component_of_wind"                 # u_50hPa
+      - "v_component_of_wind"                 # v_50hPa
+      - "vertical_velocity"                   # omg_50hPa
     pressure_level:
       - "50"
       - "100"
